--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.1.2
-
-
+  staggered_grid_view_flutter: ^0.0.4
+  flutter_staggered_grid_view: 
 
 
   # The following adds the Cupertino Icons font to your application.
