--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider:
   expansion_tile_card:
   lottie: ^2.1.0
+  sqflite: ^2.2.4+1
 
 
   # The following adds the Cupertino Icons font to your application.
